--- a/app/views/users/_nav.html.slim
+++ b/app/views/users/_nav.html.slim
@@ -8,7 +8,7 @@ ul.nav.nav-tabs.nav-stacked
 - if @user == current_user
   ul.nav.nav-tabs.nav-stacked
     li
-      = link_to t(:my_place), user_place_path(@user)
+      = link_to t(:my_place), edit_or_new_user_place_path(@user)
 
     - [:profile, :settings, :password].each do |section|
       li class=(section == current_section ? 'active' : '')
