--- a/app/views/users/_profile_form.html.slim
+++ b/app/views/users/_profile_form.html.slim
@@ -5,7 +5,9 @@
   = f.label :website, class: 'control-label'
   = f.text_field :website
 
-  = f.label :biography, class: 'control-label'
+  = f.label :biography, class: 'control-label' do
+    span= t :biography
+    = render 'application/markdown_link'
   = f.text_area :biography, :rows => 10, class: 'span5'
 
   .form-actions.btn-toolbar
