--- a/app/views/users_places/_form.html.slim
+++ b/app/views/users_places/_form.html.slim
@@ -2,7 +2,9 @@
   = f.label :title, :class => 'control-label'
   = f.text_field :title
 
-  = f.label :description, :class => 'control-label'
+  = f.label :description, :class => 'control-label' do
+    span= t :description
+    = render 'application/markdown_link'
   = f.text_area :description, :rows => 15, :class => 'span5'
 
   .form-actions.btn-toolbar
