--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -31,36 +31,39 @@ html lang="en"
             span.icon-bar
           a.brand href=root_path 4couch
           .container-fluid.nav-collapse
-            form.navbar-search.pull-left action=places_path
-              input#search.search-query.span3 type="text" placeholder=@search_placeholder name="q"
-            #user-nav-container.nav.pull-right
-              ul.nav
-                li.divider-vertical
-                - if user_signed_in?
-                  li.dropdown
-                    = link_to "#", class: 'dropdown-toggle user-nav-link', data: {toggle: 'dropdown'} do
-                      span= current_user.username
-                      = image_tag current_user.gravatar_url
-                    ul.dropdown-menu
+            ul.nav
+              li
+                a href=places_path = t :world_map
+              li
+                form.navbar-search.pull-left action=places_path
+                  input#search.search-query.span3 type="text" placeholder=@search_placeholder name="q"
+            ul#user-nav-container.nav.pull-right
+              li.divider-vertical
+              - if user_signed_in?
+                li.dropdown
+                  = link_to "#", class: 'dropdown-toggle user-nav-link', data: {toggle: 'dropdown'} do
+                    span= current_user.username
+                    = image_tag current_user.gravatar_url
+                  ul.dropdown-menu
+                    li
+                      a href=user_path(current_user)
+                        strong= t :profile
+                    li.divider
                       li
-                        a href=user_path(current_user)
-                          strong= t :profile
-                      li.divider
-                        li
-                          = link_to t(:my_place), edit_or_new_user_place_path(current_user)
-                      li.divider
-                      li
-                        = link_to t('edit.profile'), edit_user_section_path(current_user, :profile)
-                      li
-                        = link_to t('edit.settings'), edit_user_section_path(current_user, :settings)
-                      li.divider
-                      li
-                        = link_to t(:sign_out), destroy_user_session_path
-                - else
-                  li
-                    a href=new_user_registration_path = t :sign_up
-                  li
-                    a href=new_user_session_path = t :sign_in
+                        = link_to t(:my_place), edit_or_new_user_place_path(current_user)
+                    li.divider
+                    li
+                      = link_to t('edit.profile'), edit_user_section_path(current_user, :profile)
+                    li
+                      = link_to t('edit.settings'), edit_user_section_path(current_user, :settings)
+                    li.divider
+                    li
+                      = link_to t(:sign_out), destroy_user_session_path
+              - else
+                li
+                  a href=new_user_registration_path = t :sign_up
+                li
+                  a href=new_user_session_path = t :sign_in
     .container.main
       .row
         - if content_for?(:breadcrumb)
