add a 'my place' for connected users

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,15 +33,18 @@ html lang="en"
           .container-fluid.nav-collapse
             ul.nav
               li
-                a href=places_path = t :world_map
-              li
                 form.navbar-search.pull-left action=places_path
                   input#search.search-query.span3 type="text" placeholder=@search_placeholder name="q"
+              li
+                a href=places_path = t :world_map
+              - if user_signed_in?
+                li
+                  a href=user_place_path(current_user, current_user.place) = t :my_place
             ul#user-nav-container.nav.pull-right
               li.divider-vertical
               - if user_signed_in?
                 li.dropdown
-                  = link_to "#", class: 'dropdown-toggle user-nav-link', data: {toggle: 'dropdown'} do
+                  = link_to "#", class: 'dropdown-toggle user-nav-link visible-desktop', data: {toggle: 'dropdown'} do
                     span= current_user.username
                     = image_tag current_user.gravatar_url
                   ul.dropdown-menu
@@ -50,7 +53,7 @@ html lang="en"
                         strong= t :profile
                     li.divider
                       li
-                        = link_to t(:my_place), edit_or_new_user_place_path(current_user)
+                        = link_to t('edit.my_place'), edit_or_new_user_place_path(current_user)
                     li.divider
                     li
                       = link_to t('edit.profile'), edit_user_section_path(current_user, :profile)
