don't display 'edit my place' links if the place wasn't created

--- a/app/views/users/_nav.html.slim
+++ b/app/views/users/_nav.html.slim
@@ -6,9 +6,10 @@ ul.nav.nav-tabs.nav-stacked
         h2.username.slab= @user.username
 
 - if @user == current_user
-  ul.nav.nav-tabs.nav-stacked
-    li
-      = link_to t('edit.my_place'), edit_or_new_user_place_path(@user)
+  - if @user.place.present?
+    ul.nav.nav-tabs.nav-stacked
+      li
+        = link_to t('edit.my_place'), edit_or_new_user_place_path(@user)
 
   ul.nav.nav-tabs.nav-stacked
     - [:profile, :settings, :password].each do |section|
