--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -38,7 +38,7 @@ html lang="en"
               li
                 a href=places_path = t :world_map
               - if user_signed_in?
-                - if !current_user.place.present?
+                - if current_user.place.present?
                   li
                     a href=user_place_path(current_user, current_user.place) = t :my_place
                 - else
@@ -56,7 +56,8 @@ html lang="en"
                     li
                       a href=user_path(current_user)
                         strong= t :profile
-                    li.divider
+                    - if current_user.place.present?
+                      li.divider
                       li
                         = link_to t('edit.my_place'), edit_or_new_user_place_path(current_user)
                     li.divider
