--- a/app/views/users/_nav.html.slim
+++ b/app/views/users/_nav.html.slim
@@ -8,7 +8,7 @@ ul.nav.nav-tabs.nav-stacked
 - if @user == current_user
   - if @user.place.present?
     ul.nav.nav-tabs.nav-stacked
-      li
+      li class=(in_new_or_edit_user_place? ? 'active' : '')
         = link_to t('edit.my_place'), edit_or_new_user_place_path(@user)
 
   ul.nav.nav-tabs.nav-stacked
