--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -35,11 +35,12 @@ html lang="en"
               li
                 form.navbar-search.pull-left action=places_path
                   input#search.search-query.span3 type="text" placeholder=@search_placeholder name="q"
-              li
+            ul.nav
+              li class=(in_world_map? ? 'active' : '')
                 a href=places_path = t :world_map
               - if user_signed_in?
                 - if current_user.place.present?
-                  li
+                  li class=(@place.present? && current_user.place == @place ? 'active' : '')
                     a href=user_place_path(current_user, current_user.place) = t :my_place
                 - else
                   li
