add a few more active links

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -22,6 +22,9 @@
 
     .form-actions
       = f.submit class: "btn btn-primary"
-      = link_to t(:sign_in), new_session_path(resource_name), class: "btn btn-link"
-      = link_to t(:forgot_password), new_password_path(resource_name), class: "btn btn-link"
+      = link_to new_session_path(resource_name), class: "btn btn-link" do
+        small= t :sign_in
+      = link_to new_password_path(resource_name), class: "btn btn-link" do
+        small= t :forgot_password
+
 
