--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,11 +1,13 @@
-h2 Forgot your password?
-= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
-  = devise_error_messages!
+.span6.offset1
+  = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :class => 'form-horizontal' }) do |f|
+    .control-group
+      = f.label :login, class: 'control-label'
+      .controls
+        = f.text_field :login
 
-  = f.label :login
-  = f.text_field :login
-
-  .form-actions
-    = f.submit "Send me reset password instructions", class: "btn btn-primary"
-    = link_to "Sign in", new_session_path(resource_name), class: "btn btn-link"
-    = link_to "Sign up", new_registration_path(resource_name), class: "btn btn-link"
+    .form-actions
+      = f.submit "Send me reset instructions", class: "btn btn-primary"
+      = link_to new_session_path(resource_name), class: "btn btn-link" do
+        small= t :sign_in
+      = link_to new_registration_path(resource_name), class: "btn btn-link" do
+        small= t :sign_up
