--- a/app/views/users_places/_form.html.slim
+++ b/app/views/users_places/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for [@user, @place] do |f|
+= form_for @place, url: user_place_path(@user) do |f|
   = f.label :title, :class => 'control-label'
   = f.text_field :title
 
