fix style for the new width

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,6 +59,7 @@ html {
 	    background: #FFF;
 	    width: 960px;
 	    min-height: 100%;
+	    padding-top: 30px;
 
 	    h2.username.slab {
 		color: #333;
@@ -72,7 +73,7 @@ html {
 	    }
 
 	    #map {
-		height: 400px;
+		height: 340px;
 		border: 2px solid #333;
 		border-radius: 2px;
 
