--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,6 +2,10 @@
  *= require slabtext
  */
 
+#home-map {
+    height: 340px;
+}
+
 h2.slab {
     font-family: 'Varela Round', sans-serif;
     text-transform: uppercase;
