--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -5,4 +5,4 @@
     span.content= t('home.definition.content')
     em.example= t('home.definition.example')
 .span5
-  #map= home_map(@places)
+  #home-map.map
