--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,9 @@ html lang="en"
 
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
+
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Varela+Round'
+
     = stylesheet_link_tag "application", :media => "all"
     = stylesheet_link_tag params[:controller]
 
@@ -100,6 +102,7 @@ html lang="en"
               li.divider |
               li
                 a href="https://github.com/phorque/4couch/issues" target="_blank" = t 'footer.report_bug'
+    = javascript_include_tag "http://maps.google.com/maps/api/js?sensor=false&amp;language=en"
     = javascript_include_tag "application"
     = javascript_include_tag params[:controller]
     = yield :scripts
