add a conversation system

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -59,6 +59,8 @@ html lang="en"
                     li
                       a href=user_path(current_user)
                         strong= t :profile
+                    li
+                      = link_to "Conversations", user_conversations_path(current_user)
                     li.divider
                     li
                       = link_to t('edit.settings'), edit_user_section_path(current_user, :settings)
