add a new messages flag

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -51,6 +51,10 @@ html lang="en"
             ul#user-nav-container.nav.pull-right
               li.divider-vertical
               - if user_signed_in?
+                - if current_user.new_messages?
+                  li
+                    a href=user_conversations_path(current_user)
+                      span.label.label-important New messages
                 li class="dropdown #{active_in_user(current_user)}"
                   = link_to "#", class: 'dropdown-toggle user-nav-link visible-desktop', data: {toggle: 'dropdown'} do
                     span= current_user.username
