--- a/app/views/users_places/_form.html.slim
+++ b/app/views/users_places/_form.html.slim
@@ -1,6 +1,6 @@
 = form_for @place, url: user_place_path(@user) do |f|
   = f.label :city
-  = f.text_field :city
+  = f.text_field :city, class: "search-city"
 
   = f.label :description, class: 'control-label' do
     span= t :description
