--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@ html {
     height: 100%;
 
     body {
-	background-image: url(/assets/stripes.png);
+	background-image: url(/assets/stripes_black.png);
 	height: 100%;
 
 	.navbar {
